--- a/src/App.css
+++ b/src/App.css
@@ -10,16 +10,16 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  overflow-y: visible;
-  overflow-x: hidden;
+
   font-size: 1.15rem;
   font-family: "Montserrat", sans-serif;
   background-color: #3d405b;
 }
 
 .container {
-  margin: 1rem 2rem;
-  height: 100vh;
+  width: 100% !important;
+  margin: auto;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,7 +28,6 @@ body {
   margin: 0rem;
   background-color: black;
   height: 100vh;
-  overflow-y: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
